chore: 更新基础镜像版本和Docker仓库命名空间
- 将所有Docker基础镜像从python:3.14.0降级到python:3.13.9
- 将Docker镜像标签从jonasal/更新为loveyu/命名空间
- 更新README.md文档中的镜像引用
- 同步更新GitHub Actions工作流中的镜像标签
- 添加.idea/目录到.gitignore忽略文件

--- a/.github/workflows/build_client.yml
+++ b/.github/workflows/build_client.yml
@@ -43,10 +43,10 @@ jobs:
             linux/arm/v7
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            jonasal/devpi-client:latest
-            jonasal/devpi-client:${{ env.APP_MAJOR }}
-            jonasal/devpi-client:${{ env.APP_MAJOR }}.${{ env.APP_MINOR }}
-            jonasal/devpi-client:${{ env.APP_MAJOR }}.${{ env.APP_MINOR }}.${{ env.APP_PATCH }}
+            loveyu/devpi-client:latest
+            loveyu/devpi-client:${{ env.APP_MAJOR }}
+            loveyu/devpi-client:${{ env.APP_MAJOR }}.${{ env.APP_MINOR }}
+            loveyu/devpi-client:${{ env.APP_MAJOR }}.${{ env.APP_MINOR }}.${{ env.APP_PATCH }}
 
 
   docker_buildx_alpine:
@@ -75,7 +75,7 @@ jobs:
             linux/arm/v7
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            jonasal/devpi-client:latest-alpine
-            jonasal/devpi-client:${{ env.APP_MAJOR }}-alpine
-            jonasal/devpi-client:${{ env.APP_MAJOR }}.${{ env.APP_MINOR }}-alpine
-            jonasal/devpi-client:${{ env.APP_MAJOR }}.${{ env.APP_MINOR }}.${{ env.APP_PATCH }}-alpine
+            loveyu/devpi-client:latest-alpine
+            loveyu/devpi-client:${{ env.APP_MAJOR }}-alpine
+            loveyu/devpi-client:${{ env.APP_MAJOR }}.${{ env.APP_MINOR }}-alpine
+            loveyu/devpi-client:${{ env.APP_MAJOR }}.${{ env.APP_MINOR }}.${{ env.APP_PATCH }}-alpine
