--- a/server/Dockerfile-alpine
+++ b/server/Dockerfile-alpine
@@ -11,6 +11,7 @@ RUN apk add --no-cache \
         libffi \
         libffi-dev \
     && \
+    pip install --no-cache-dir --upgrade pip \
     pip install --no-cache-dir -r /requirements.txt \
     && \
     apk del \
