Revert "chore: 升级pip并优化Docker构建"
This reverts commit 881312ea7e1f467705e23b63695d967691d94b23.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -15,8 +15,7 @@ RUN set -ex && \
             libffi8 \
             libffi-dev \
     && \
-# Install Python dependencies. \
-    pip install --no-cache-dir --upgrade pip \
+# Install Python dependencies.
     pip install --no-cache-dir -r /requirements.txt && \
 # Remove everything that is no longer necessary.
     apt-get remove --purge -y \
